istioctl/pkg/rbac/testdata/rbac-policies-v2-expected.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: default
spec:
  rules:
  - constraints:
    - key: destination.labels[version]
      values:
      - v3
    methods:
    - '*'
---
apiVersion: rbac.istio.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bind-service-viewer
  namespace: default
spec:
  allow:
  - role: service-viewer
    subjects:
    - properties:
        source.namespace: istio-system
    - groups:
      - bar
      names:
      - foo
  workloadSelector:
    labels:
      app: productpage
---
